# dog-crate-monitor

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
.github/: copilot-instructions.md
components/button_bsp/: multi_button.c  multi_button.h
components/epaper_lib/: Kconfig.projbuild
components/epaper_lib/Fonts/: font.c
components/epaper_port/: CMakeLists.txt
docs/: todo.md
docs/architecture/: overview.md
docs/architecture/decisions/: 0001-screen-display-ownership.md  0002-screen-transition-render-invalidation.md  0003-generation-scoped-render-coalescing.md  README.md
main/: CMakeLists.txt  app_dispatcher.c  app_dispatcher.h  app_event.c  app_event.h  app_store.c  app_store.h  button_event.c  button_event.h  display.c  display.h  display_controller.c  display_controller.h  display_types.h  environment.c  environment.h  environment_types.h  main.c  screen_layout.c  screen_layout.h  screen_manager.c  screen_manager.h  screen_render.c  screen_render.h  screen_types.h  task_manager.c  task_manager.h  utils.c  utils.h
main/screens/: home_screen.c  home_screen.h  menu_screen.c  menu_screen.h  settings_screen.c  settings_screen.h
main/utils/: macros.h
main/widgets/: list_navigation.c  list_navigation.h
